--- a/asset/css/card.css
+++ b/asset/css/card.css
@@ -1,12 +1,6 @@
 a{
     color:inherit;
 }
-.display{
-    display: grid;
-    gap: 32px;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    grid-auto-flow: row;
-}
 
 .row>* {
     padding: calc(var(--bs-gutter-x) * .5);
@@ -22,12 +16,11 @@ a{
 .card-img img{
     /* border: solid #dadada 1px; */
     border-radius: 5px;
-    max-width: 200px;
-}
+    width: 100%;
+    }
 
 .card-img{
     border-radius: 5px;
-    min-height: 200px;
     display: flex;
     align-items: center; /* 垂直置中 */
 }
