--- a/asset/css/global.css
+++ b/asset/css/global.css
@@ -183,3 +183,39 @@ section{
         font-size: 24px;
     }
 }
+
+
+
+/* 通知樣式 */
+#comment-notification ,#cart-notification{
+    animation: slideInOut 2.5s ease-in-out; /* 動畫持續 2 秒 */
+}
+
+
+/* 通知樣式可共用 */
+#comment-notification ,#cart-notification{
+    position: fixed; 
+    top: 100px; 
+    right: 32px; 
+    background-color: #60A15A; 
+    color: white; padding: 10px 20px; 
+    border-radius: 5px; 
+    display: none; 
+    z-index: 1000; 
+    font-size: 14px;
+}
+/* 通知從右側滑入再滑出動畫 */
+@keyframes slideInOut {
+    0% {
+        transform: translateX(300px); /* 初始位置：隱藏在右側 */
+        opacity: 0;
+    }
+    10%, 90% {
+        transform: translateX(0); /* 中間位置：完全可見 */
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(300px); /* 最終位置：隱藏回右側 */
+        opacity: 0;
+    }
+}
